--- a/gb/25/2/7/n14432291.md
+++ b/gb/25/2/7/n14432291.md
@@ -20,7 +20,7 @@
 <p>视频显示，博主到了李文亮的武汉老家探访李的父母，李母情绪激动地诉说，李文亮住院他们都不知道，直到孩子“咽气”了。医院才派车接他们去，但自始至终都没让两位老人看孩子最后一眼，“隔着玻璃都不让看”，“我们都不知道在哪个屋抢救的”，“就让我们在那等着”。</p>
 <p>李文亮母亲斥责官方：“你接我们来干什么呀，连我儿子一眼都不让看哪。”“（医生说）疫情期间谁都不能进去，我不能进去，我们在外边窗户可以看一眼哪。你这太没有人性了吧！”</p>
 <p>两位老人还说，当时官员说到殡仪馆可以看遗体，结果殡仪馆也没让看，他们最后只见到了骨灰。李文亮母亲说，“我真都发脾气了，这是什么领导啊，都这么骗人哪！”</p>
-<p><center><a title="李文亮父母怒斥当局：连孩子遗体都不让看" src=""></a><a href="https://d37g5boc7rm625.cloudfront.net/A4tjomShy"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hd0fnusck9jW5anz6XirAS7q1hc1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a title="李文亮父母怒斥当局：连孩子遗体都不让看" loading="lazy" data2-src=""></a><a href="https://d2frcdcjb0c6wq.cloudfront.net/D4yjomShy"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1hd0fnusck9jW5anz6XirAS7q1hc1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>历史的今天</h2>
 <p>根据公开资料，1985年，李文亮出生于辽宁锦州，自2014年在武汉市中心医院工作。武汉疫情爆发前的2019年12月30日，武汉市中心医院医生艾芬在科室群组发出一份检测报告，显示一名病人对SARS冠状病毒等检出高置信度阳性指标。李文亮将这则讯息发布到同学群中并提醒注意保护，该消息很快被传出。</p>
 <p>2019年12月31日凌晨，李文亮被医院领导叫到武汉市卫健委询问情况，天亮上班后又被医院监察科约谈，并在此后应要求写下了一份《不实消息外传的反思与自我批评》。2020年1月3日，李文亮因“在互联网上发布不实言论”而被武汉市警方提出警示和训诫。</p>
@@ -32,35 +32,33 @@
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/20/12/29/n12652869.md#1" target="_blank" rel="noopener">【2020盘点】中国十大网络热点新闻（下）</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430700.md#1" target="_blank" rel="noopener">美国密苏里州控告中共散播疫情 专家指意义重大</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/20/3/8/n11925562.md#1" target="_blank" rel="noopener">武汉医生曝光早期报告记录 疫情早已上报</a> </span></span></span></span></h3>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/4/19/n12043815.md#1">“砸中俄的锅” 中共大使骂华人回国是散毒</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/1/n12726194.md#1">中共研究世界上最危险“病毒” 旧闻被翻出</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/6/8/n13008528.md#1">美国调查病毒起源 中共发报告再拉世卫站台</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/28/n13940151.md#1">马斯克转发武汉病毒所泄漏言论 官媒发文恫吓</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/29/n10750586.md#1">张飞转世？岳家将牛皋怒喝退金兵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426554.md#1">组图：台湾故宫新年推“岁时吉庆”文物特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14317010.md#1">【古道人生】什么是真善？看他怎么待穷山民 善报不招自来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429072.md#1">【未解之谜】死于日军之手 杨氏兄妹做鬼38年再续前缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426917.md#1">利用立春升阳气 打造一年好彩头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431506.md#1">【纪元焦点】川普关税战 加墨大转变 中共报复</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429911.md#1">【晚间新闻】德州建边境墙 中美洲遣返航班激增</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429907.md#1">【中国禁闻】中共称流感高发吁打疫苗 民曝内情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430270.md#1">经济下行 中国多地基建工程烂尾触目惊心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430253.md#1">朝鲜女教师为何会提两桶水上公寓楼？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429841.md#1">袁红冰：北京官场称习在中美关系上“做梦”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14430010.md#1">投资10亿 红片《蛟龙行动》新年档票房大翻车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429949.md#1">以为只是感冒 陆27岁男星因中枢神经感染猝逝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431615.md#1">大陆疯传汪小菲助大S后事 小S：无法容忍的谎言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429756.md#1">忍悲处理大S后事 小S向《不熙娣》告假 暂难复工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430660.md#1">中国经济低迷 民众过年弃旅游改观影 引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14431800.md#1">枕头发黄怎么办？ 专家推荐一物可迅速清理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430355.md#1">为什么在室内晾衣服会影响健康？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431205.md#1">为何你会在凌晨3点醒来？ 如何继续入睡？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426847.md#1">颈椎错位致多种疾病  专家教你保健操改善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429464.md#1">【健康1+1】跟着医生吃三餐 缓解糖尿病 成功减重！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/7/n14432291.htm">武汉肺炎吹哨人李文亮5周年忌日 网民纪念</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432291.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
